public/css/basic-nav-stylesheet.css
body {
    overflow-x: hidden;
}

.heading {
    width: 2500px;
    height: 100px;
    font-size: 25px;
    font-weight: bold;
    padding: 30px 0 0 50px;
}

.campus-map img {
    margin-left: auto;
    padding-top: 30px;
    display: block;
    height: 100%;
    width: 100%;
    padding: 0;
}

#main-menu-btn {
    width: 130px;
    height: 30px;
    font-size: 16px;
    font-weight: bold;
    float: right;
    vertical-align: bottom;
    margin-top: 100px;
    margin-right: 30px;
}

.col-sm-2 {
  height: 100%;
  width: 176px;
  z-index: 1;
  left: 0;
  overflow-x: hidden;
  padding-top: 20px; 
  position: absolute;
}

.col-sm-10 {
    margin-left: 200px;
    padding-right: 0;
}

.sidenav-cont {
  width: 100%;
  float: right;
}

.col-sm-2 button, .dropdown-btn {
  padding: 10px;
  text-decoration: none;
  font-size: 14px;
  display: block;
  border: none;
  background: none;
  width: 100%;
  text-align: left;
  cursor: pointer;
  outline: none;
}

.active::after {
    font-weight: 900;
    display: inline-block;
    padding-right: 15px;
    font-size: 180%;
}

.dropdown-container {
  display: none;
  background-color: #003c71;
  opacity: 0.5;
}

.fa-caret-down {
  float: right;
  padding-right: 5px;
}

.col-sm-2 button:hover, .dropdown-btn:hover{
  background-color: #003c71;
  opacity: 0.5;
}

.active:hover{
  background-color: #003c71;
  opacity: 0.5;
}

.dropdown-container button:last-child:hover{
  background-color: #025cab;
  opacity: 0.9;
}

#student_parking_overlay {
  position: relative;
  top: 0px;
  left: 0px;
}

#electrical_vehicle_overlay{
  position: relative;
  top: 0px;
  left: 0px;
}

#car_share_overlay{
  position: relative;
  top: 0px;
  left: 0px;
}

#bike_repair_overlay{
  position: relative;
  top: 0px;
  left: 0px;
}

#pay_station_overlay{
  position: relative;
  top: 0px;
  left: 0px;
}
#motorcycle_overlay{
  position: relative;
  top: 0px;
  left: 0px;
}
#timing_overlay{
  position: relative;
  top: 0px;
  left: 0px;
}

#image {
  position: relative;
  top: 0;
  left: 0;
}

#image_map {
  position: absolute;
  top: 0px;
  left: 0px;
}

#area {
  position: absolute;
  top: 0px;
  left: 0px;
}

area { 
  display:none;
}

#bus_stops_overlay,
#campus_entrances_overlay, 
#employee_parking_overlay, 
#first_aid_overlay, 
#handicap_overlay,
#security_overlay,
#student_parking_overlay,
#visitor_parking_overlay,
#food_services_overlay,
#bike_overlay,
#electrical_vehicle_overlay,
#car_share_overlay,
#bike_repair_overlay,
#pay_station_overlay,
#motorcycle_overlay,#timing_overlay{
  display: none
}

#map_area {
  position: relative;
}

#details_box {
    background-color: #ffea2e;
    color: #003c71;
    font-size: 10px;
    /* height: 130px; */
}

#details_title {
    font-size: 15px;
    font-weight: bold;
}

#details_box::after {
    position: fixed;
    display: block;
    bottom: 0px;
}

.mapster_tooltip {
  pointer-events: none;
}

.fa-arrow-right {
  position: absolute;
  right: 10px;
  top: 100px;
}

